--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.3.1",
+    "@better-scroll/observe-dom": "^2.3.1",
+    "@better-scroll/pull-up": "^2.3.1",
+    "axios": "^0.21.1",
+    "better-scroll": "^2.3.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
